[gd_scene load_steps=3 format=2]

[ext_resource path="res://gameplay/scanner/scanner.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 95, 59 )

[node name="scanner" type="Area2D"]
collision_layer = 9
collision_mask = 2
script = ExtResource( 1 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -95.0
margin_top = -60.0
margin_right = 95.0
margin_bottom = 58.0
color = Color( 0.219608, 0.596078, 0.635294, 0.196078 )

[connection signal="body_entered" from="." to="." method="_on_scanner_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_scanner_body_exited"]
